# alethia-reth

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  clippy.toml  justfile  release-please-config.json  typos.toml
.claude/: settings.local.json
.claude/agents/: taiko-reth-developer.md
.github/: actionlint.yaml
.github/workflows/: ci.yml  claude-code-review.yml  claude-code.yml  docker-build.yml  release-please.yml  repo--claude-code-review.yml  repo--claude.yml  repo--lint-pr-title.yml  repo--merge-gatekeeper.yml  repo--release-please.yml
crates/block/: Cargo.toml
crates/block-core/: Cargo.toml
crates/block-lite/: Cargo.toml
crates/block/src/: assembler.rs  builder.rs  config.rs  derived_block.rs  executor.rs  factory.rs  filtered_block.rs  lib.rs  receipt_builder.rs  testutil.rs  tx_selection.rs
crates/block/src/tx_selection/: limits.rs  mod.rs
crates/chainspec/: Cargo.toml
crates/chainspec-core/: Cargo.toml
crates/chainspec-core/src/genesis/: devnet.json
crates/chainspec-lite/: Cargo.toml
crates/chainspec/src/: hardfork.rs  lib.rs  parser.rs  spec.rs  zk_gas.rs
crates/chainspec/src/genesis/: devnet.json  masaya.json  taiko-hoodi.json  tolba.json
crates/cli/: Cargo.toml
crates/cli/src/: chainspec.rs  command.rs  lib.rs  parser.rs  tables.rs
crates/cli/src/args/: mod.rs  proofs_history.rs
crates/cli/src/commands/: mod.rs
crates/cli/src/commands/proofs/: init.rs  mod.rs  prune.rs  unwind.rs
crates/consensus/: Cargo.toml
crates/consensus-common/: Cargo.toml
crates/consensus-common/src/: validation.rs
crates/consensus-core/: Cargo.toml
crates/consensus-core/src/: validation.rs
crates/consensus/src/: alloy_compat.rs  anchor_constants.rs  builder.rs  eip4396.rs  host.rs  lib.rs  validation.rs
crates/consensus/src/transaction/: compress.rs  envelope.rs  mod.rs  pooled.rs  tx_type.rs  typed.rs
crates/consensus/src/validation/: anchor.rs  mod.rs  tests.rs
crates/db/: Cargo.toml
crates/db/src/: compress.rs  lib.rs  model.rs  queries.rs
crates/evm/: Cargo.toml
crates/evm/src/: alloy.rs  context.rs  error.rs  evm.rs  execution.rs  factory.rs  handler.rs  jumpdest_limiter.rs  lib.rs  spec.rs  zk_gas.rs
crates/evm/src/handler/: instructions.rs  mod.rs
crates/evm/src/precompiles/: context.rs  l1sload.rs  l1staticcall.rs  mod.rs
crates/evm/src/zk_gas/: adapter.rs  meter.rs  mod.rs  precompiles.rs  runtime.rs  schedule.rs  tests.rs  unzen.rs  uzen.rs
crates/evm/src/zk_gas/golden/: jumpdest_loop_unzen.txt  keccak_limit_exceeded_unzen.txt  staticcall_identity_masaya.txt  staticcall_identity_unzen.txt
crates/execution/: Cargo.toml
crates/execution/src/: assembler.rs  config.rs  executor.rs  factory.rs
crates/forks/: Cargo.toml
crates/l1-client/: Cargo.toml
crates/l1-client/src/: lib.rs
crates/l1-client/tests/: e2e_l1sload.rs  e2e_l1staticcall.rs
crates/network/: Cargo.toml
crates/network/src/: lib.rs
crates/network/src/taiko_aux/: connection.rs  handlers.rs  message.rs  mod.rs  provider.rs  sync.rs
crates/node/: Cargo.toml
crates/node-builder/: Cargo.toml
crates/node-builder/src/: consensus.rs  eth_api.rs  executor.rs  lib.rs  network.rs  payload_builder.rs
crates/node/src/: components.rs  lib.rs  pool.rs  proof_history.rs
crates/node/src/builder/: consensus.rs  eth_api.rs  executor.rs  mod.rs  network.rs  payload_builder.rs
crates/node/src/proof_history/: config.rs  exex.rs  init.rs  mod.rs  storage_init.rs
crates/node/src/txpool/: mod.rs  transaction.rs
crates/payload/: Cargo.toml
crates/payload/src/: builder.rs  lib.rs  terminal_zkgas.rs
crates/payload/src/builder/: execution.rs  mod.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: addresses.rs  extra_data.rs  lib.rs  taiko.rs  transaction.rs
crates/primitives/src/engine/: mod.rs  types.rs
crates/primitives/src/payload/: attributes.rs  builder.rs  built_payload.rs  mod.rs
crates/proofs-exex/: Cargo.toml
crates/proofs-exex/src/: lib.rs  sync.rs
crates/proofs-exex/tests/: e2e.rs
crates/proofs-trie/: Cargo.toml
crates/proofs-trie/src/: api.rs  cursor_factory.rs  error.rs  in_memory.rs  initialize.rs  lib.rs  live.rs  metrics.rs  proof.rs  provider.rs
crates/proofs-trie/src/db/: cursor.rs  mod.rs  store.rs
crates/proofs-trie/src/db/models/: block.rs  change_set.rs  kv.rs  mod.rs  storage.rs  version.rs
crates/proofs-trie/src/prune/: error.rs  metrics.rs  mod.rs  pruner.rs  task.rs
crates/rpc/: Cargo.toml
crates/rpc-types/: Cargo.toml
crates/rpc-types/src/: lib.rs
crates/rpc/src/: converter.rs  debug.rs  lib.rs  proof_state.rs
crates/rpc/src/engine/: api.rs  builder.rs  mod.rs  validator.rs
crates/rpc/src/eth/: auth.rs  builder.rs  cached_historical.rs  error.rs  eth.rs  mod.rs  proofs.rs  types.rs
crates/rpc/src/eth/auth/: lookup.rs  mod.rs  tests.rs  types.rs
crates/rpc/src/proofs/: debug.rs  eth.rs  mod.rs  state_factory.rs
docs/plans/: 2026-01-16-net-feature-payload-design.md  2026-01-16-net-feature-payload-plan.md  2026-01-19-tx-selection-refactor-design.md  2026-01-22-reth-v1-10-1-deps-align-design.md  2026-01-22-txlist-da-size-guardrails-design.md  2026-01-27-proposal-last-block-uncertain-design.md  2026-01-27-reth-1.10.2-bump-design.md  2026-01-29-move-batch-lookup-to-taikoauth.md  2026-01-30-optimization-scan-design.md  2026-01-30-optimization-scan-plan.md  2026-02-03-hoodi-shasta-timestamp-delay-design.md  2026-02-04-shasta-last-block-scan-optimization-design.md  2026-04-16-witness-range-rpc.md  2026-04-17-witness-range-benchmarks.md  2026-04-17-witness-range-lazy-revert-design.md  2026-04-17-witness-range-lazy-revert.md  2026-04-20-witness-rpc-benchmark.md
scripts/: bench_witness_rpc.sh
src/: lib.rs  test.rs
src/audits/: claude-audit-1.md
src/block/: assembler.rs  executor.rs  factory.rs  mod.rs
src/chainspec/: hardfork.rs  mod.rs  parser.rs  spec.rs
src/cli/: command.rs  mod.rs  tables.rs
src/consensus/: builder.rs  eip4396.rs  mod.rs  validation.rs
src/db/: compress.rs  model.rs
src/evm/: alloy.rs  api.rs  config.rs  evm.rs  (+5 more)
(+73 files in other folders)
