[workspace]
members = [
    "bin/alethia-reth",
    "crates/block",
    "crates/chainspec",
    "crates/cli",
    "crates/consensus",
    "crates/db",
    "crates/evm",
    "crates/network",
    "crates/node",
    "crates/node-builder",
    "crates/payload",
    "crates/primitives",
    "crates/rpc",
]
resolver = "2"

[workspace.package]
version = "0.6.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"

[workspace.dependencies]
# alloy
alloy-chains = { version = "0.2.5", default-features = false }
alloy-consensus = { version = "1.6.3", default-features = false }
alloy-eips = { version = "1.6.3", default-features = false }
alloy-evm = { version = "0.27.2", default-features = false }
alloy-genesis = { version = "1.6.3", default-features = false }
alloy-hardforks = "0.4.5"
alloy-json-rpc = { version = "1.6.3", default-features = false }
alloy-network = { version = "1.6.3", default-features = false }
alloy-primitives = { version = "1.5.6", default-features = false, features = [
    "map-foldhash",
] }
alloy-rlp = { version = "0.3.13", default-features = false, features = [
    "core-net",
] }
alloy-rpc-client = { version = "1.6.3", default-features = false }
alloy-rpc-types-engine = { version = "1.6.3", default-features = false }
alloy-rpc-types-eth = { version = "1.6.3", default-features = false }
alloy-rpc-types-trace = { version = "1.6.3", default-features = false }
alloy-rpc-types-txpool = { version = "1.6.3", default-features = false }
alloy-serde = { version = "1.6.3", default-features = false }
alloy-signer = { version = "1.6.3", default-features = false }
alloy-signer-local = { version = "1.6.3", default-features = false }
alloy-sol-types = { version = "1.5.6", default-features = false }

# general utilities
arbitrary = "1.3"
async-trait = "0.1.68"
auto_impl = "1"
clap = "4"
derive_more = { version = "2", default-features = false, features = ["full"] }
eyre = "0.6"

# rpc
jsonrpsee = "0.26.0"
jsonrpsee-core = "0.26.0"
jsonrpsee-http-client = "0.26.0"
jsonrpsee-server = "0.26.0"
jsonrpsee-types = "0.26.0"

# optimism
op-alloy-flz = { version = "0.13.1", default-features = false }

# data encoding
flate2 = "1.1.5"
parity-scale-codec = "3.2.1"

# reth
reth = { git = "https://github.com/paradigmxyz/reth", package = "reth", tag = "v1.11.1" }
reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-chain-state = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-cli = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-cli-commands = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-codecs = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-consensus-common = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-db = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-db-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-engine-local = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-engine-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-engine-tree = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-ethereum-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-ethereum-engine-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-ethereum-forks = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-payload-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-payload-validator = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1", default-features = false, features = [
    "std",
] }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-revm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-rpc = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-rpc-engine-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-rpc-server-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-storage-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-storage-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-trie-common = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-trie-db = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }

# revm
revm-database-interface = { version = "9.0.0", default-features = false }

# serialization
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_with = { version = "3", default-features = false, features = ["macros"] }

# crypto
sha2 = { version = "0.10", default-features = false }

# error handling
thiserror = { version = "2.0.0", default-features = false }

# async utilities
tokio = { version = "1.44.2", default-features = false }

# observability
tracing = { version = "0.1.0", default-features = false }

[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.dev.package]
proptest.opt-level = 3
rand_chacha.opt-level = 3
rand_xorshift.opt-level = 3
unarray.opt-level = 3

[profile.debug-fast]
inherits = "release"
debug = true
lto = "thin"

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false
