[workspace]
members = [
    "bin/alethia-reth",
    "crates/block",
    "crates/chainspec",
    "crates/cli",
    "crates/consensus",
    "crates/db",
    "crates/evm",
    "crates/network",
    "crates/node",
    "crates/node-builder",
    "crates/payload",
    "crates/primitives",
    "crates/proofs-exex",
    "crates/proofs-trie",
    "crates/rpc",
    "crates/rpc-types",
]
resolver = "2"

[workspace.package]
version = "0.7.1"
edition = "2024"
rust-version = "1.93"
license = "MIT"

[workspace.dependencies]
# alloy
alloy-chains = { version = "0.2.33", default-features = false }
alloy-consensus = { version = "2.0.0", default-features = false }
alloy-eips = { version = "2.0.0", default-features = false }
alloy-evm = { version = "0.33.0", default-features = false }
alloy-genesis = { version = "2.0.0", default-features = false }
alloy-hardforks = "0.4.7"
alloy-json-rpc = { version = "2.0.0", default-features = false }
alloy-network = { version = "2.0.0", default-features = false }
alloy-primitives = { version = "1.5.6", default-features = false, features = [
    "map-foldhash",
] }
alloy-rlp = { version = "0.3.13", default-features = false, features = [
    "core-net",
] }
alloy-rpc-client = { version = "2.0.0", default-features = false }
alloy-rpc-types-debug = { version = "2.0.0", default-features = false }
alloy-rpc-types-engine = { version = "2.0.0", default-features = false }
alloy-rpc-types-eth = { version = "2.0.0", default-features = false }
alloy-rpc-types-trace = { version = "2.0.0", default-features = false }
alloy-rpc-types-txpool = { version = "2.0.0", default-features = false }
alloy-serde = { version = "2.0.0", default-features = false }
alloy-signer = { version = "2.0.0", default-features = false }
alloy-signer-local = { version = "2.0.0", default-features = false }
alloy-sol-types = { version = "1.5.6", default-features = false }

# general utilities
arbitrary = "1.3"
async-trait = "0.1.68"
auto_impl = "1.3.0"
bytes = { version = "1.11.1", default-features = false }
clap = "4"
derive_more = { version = "2", default-features = false, features = ["full"] }
eyre = "0.6"
futures-util = { version = "0.3.31", default-features = false }
humantime = "2"
parking_lot = "0.12.5"
strum = { version = "0.27", default-features = false }
tempfile = "3.24.0"

# rpc
jsonrpsee = "0.26.0"
jsonrpsee-core = "0.26.0"
jsonrpsee-http-client = "0.26.0"
jsonrpsee-server = "0.26.0"
jsonrpsee-types = "0.26.0"

# optimism
op-alloy-flz = { version = "0.13.1", default-features = false }

# data encoding
bincode = { version = "2.0.1", features = ["serde"] }
flate2 = "1.1.5"
parity-scale-codec = "3.2.1"

# metrics
metrics = { version = "0.24.3", default-features = false }

# reth
reth = { git = "https://github.com/paradigmxyz/reth", package = "reth", tag = "v2.1.0" }
reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-chain-state = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0", default-features = false }
reth-cli = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-cli-commands = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-cli-runner = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-codecs = { version = "0.3.0", default-features = false }
reth-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0", default-features = false }
reth-consensus-common = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0", default-features = false }
reth-db = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-db-api = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-engine-local = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0", default-features = false }
reth-engine-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0", default-features = false }
reth-engine-tree = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0", default-features = false }
reth-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-ethereum-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0", default-features = false }
reth-ethereum-engine-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0", default-features = false }
reth-ethereum-forks = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0", default-features = false }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0", default-features = false }
reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0", default-features = false }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0", default-features = false }
reth-execution-cache = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-execution-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0", default-features = false }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0", default-features = false }
reth-exex = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-exex-test-utils = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-metrics = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0", default-features = false }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-payload-builder-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-payload-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0", default-features = false }
reth-payload-validator = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", package = "reth-ethereum-primitives", tag = "v2.1.0", default-features = false }
reth-primitives-traits = { version = "0.3.0", default-features = false }
reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-revm = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0", default-features = false }
reth-rpc = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-rpc-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-rpc-convert = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-rpc-engine-api = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-rpc-server-types = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-storage-api = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0", default-features = false }
reth-storage-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0", default-features = false }
reth-tasks = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }
reth-trie = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0", default-features = false }
reth-trie-common = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0", default-features = false }
reth-trie-db = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0" }

# revm
revm-database-interface = { version = "11.0.0", default-features = false }

# serialization
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_with = { version = "3", default-features = false, features = ["macros"] }

# crypto
sha2 = { version = "0.10", default-features = false }

# error handling
thiserror = { version = "2.0.0", default-features = false }

# async utilities
tokio = { version = "1.44.2", default-features = false }

# observability
tracing = { version = "0.1.0", default-features = false }

[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.dev.package]
proptest.opt-level = 3
rand_chacha.opt-level = 3
rand_xorshift.opt-level = 3
unarray.opt-level = 3

[profile.debug-fast]
inherits = "release"
debug = true
lto = "thin"

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false
