[package]
name = "alethia-reth-block"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = ["net"]
prover = []
net = [
    "dep:alethia-reth-primitives",
    "alethia-reth-primitives?/net",
    "dep:reth-payload-primitives",
    "dep:reth-rpc-eth-api",
]
serde = ["dep:alethia-reth-primitives", "alethia-reth-primitives?/serde"]

[dependencies]
alethia-reth-chainspec = { path = "../chainspec", default-features = false }
alethia-reth-evm = { path = "../evm" }
alethia-reth-primitives = { path = "../primitives", default-features = false, optional = true }
alloy-consensus = { workspace = true }
alloy-eips = { workspace = true }
alloy-evm = { workspace = true }
alloy-hardforks = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rlp = { workspace = true }
alloy-rpc-types-eth = { workspace = true }
flate2 = { workspace = true }
op-alloy-flz = { workspace = true }
reth-chainspec = { workspace = true }
reth-ethereum = { workspace = true }
reth-ethereum-forks = { workspace = true }
reth-evm = { workspace = true }
reth-evm-ethereum = { workspace = true }
reth-execution-types = { workspace = true }
reth-payload-primitives = { workspace = true, optional = true }
reth-primitives = { workspace = true }
reth-primitives-traits = { workspace = true }
reth-revm = { workspace = true }
reth-rpc-eth-api = { workspace = true, optional = true }
reth-storage-errors = { workspace = true }
reth-transaction-pool = { workspace = true }
revm-database-interface = { workspace = true }
tracing = { workspace = true }
