[package]
name = "alethia-reth-chainspec-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = []
serde = ["dep:serde", "alloy-hardforks/serde"]

[dependencies]
alloy-chains = { workspace = true }
alloy-consensus = { workspace = true }
alloy-eips = { workspace = true }
alloy-genesis = { workspace = true }
alloy-hardforks = { workspace = true }
alloy-primitives = { workspace = true }
auto_impl = { workspace = true }
reth-chainspec = { workspace = true }
reth-ethereum-forks = { workspace = true }
reth-evm = { workspace = true }
reth-network-peers = { workspace = true }
reth-primitives = { workspace = true }
reth-revm = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true }
