[package]
name = "alethia-reth-chainspec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = []
serde = ["alethia-reth-forks/serde"]

[dependencies]
alethia-reth-forks = { path = "../forks", default-features = false }
alloy-hardforks = { workspace = true }
eyre = { workspace = true }
rayon = { workspace = true }
reth-chainspec = { workspace = true }
reth-cli = { workspace = true }
reth-revm = { workspace = true }
