[package]
name = "alethia-reth-chainspec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = []
serde = ["alethia-reth-forks/serde"]

[dependencies]
alethia-reth-forks = { path = "../forks", default-features = false }
eyre = { workspace = true }
reth-cli = { workspace = true }
