[package]
name = "alethia-reth-consensus-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = []

[dependencies]
alethia-reth-evm = { path = "../evm" }
alethia-reth-forks = { path = "../forks", default-features = false }
alloy-consensus = { workspace = true }
alloy-hardforks = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
reth-chainspec = { workspace = true }
reth-consensus = { workspace = true }
reth-consensus-common = { workspace = true }
reth-ethereum-consensus = { workspace = true }
reth-execution-types = { workspace = true }
reth-primitives = { workspace = true }
reth-primitives-traits = { workspace = true }
