[package]
name = "alethia-reth-consensus-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = []

[dependencies]
alethia-reth-chainspec = { path = "../chainspec" }
alethia-reth-evm = { path = "../evm" }
alloy-consensus = { workspace = true }
alloy-hardforks = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
reth = { workspace = true }
reth-execution-types = { workspace = true }
reth-node-api = { workspace = true }
reth-primitives-traits = { workspace = true }
